vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_anon_fn_call_return.vv
import v.embed_file

fn main() {
	'' == fn () embed_file.EmbedFileData {
		return $embed_file(@FILE)
	}()
}
